# llm-router-env

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/scripts/: generate_changelog.py
.github/workflows/: auto-tag.yml  changelog.yml  ci.yml  claude-auto-assign.yml  claude-code-review.yml  claude-pr-shepherd.yml  claude-proactive.yml  claude-self-improve.yml  claude.yml  stale.yml
llm_router_env/: __init__.py  env.py  models.py  reward.py  traffic.py
scripts/: demo_notebook.py  eval_baselines.py  train_ppo.py
tests/: test_env.py  test_registration.py  test_traffic.py
