[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-router-env"
dynamic = ["version"]
description = "Gymnasium RL environment for LLM inference routing optimization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.3.0",
]
dev = [
    "stable-baselines3>=2.3.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["llm_router_env*"]

[tool.setuptools_scm]
# version derived from git tags; writes _version.py for fallback in sdist builds
write_to = "llm_router_env/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
